@@ -539,6 +539,51 @@ argument_list|(
 name|input
 argument_list|)
 expr_stmt|;
+if|if
+condition|(
+name|hashCount
+operator|<=
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"hashCount must be greater than zero"
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|bucketCount
+operator|<=
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"bucketCount must be greater than zero"
+argument_list|)
+throw|;
+block|}
+if|if
+condition|(
+name|hashSetSize
+operator|<=
+literal|0
+condition|)
+block|{
+throw|throw
+operator|new
+name|IllegalArgumentException
+argument_list|(
+literal|"hashSetSize must be greater than zero"
+argument_list|)
+throw|;
+block|}
 name|this
 operator|.
 name|hashCount
